# smart_pointer

./: CMakeLists.txt  README.md
include/: smart_ptr.h
samples/: CMakeLists.txt  check_null_sample.cpp  counter_sample.cpp  func_sample.cpp  sample.cpp
